Potato in Fidge, which is openable now. Trying to find all objects with original model!

--- a/gym_ai2thor/config_files/config_example3.json
+++ b/gym_ai2thor/config_files/config_example3.json
@@ -1,5 +1,8 @@
 {
-    "open_close_interaction": false,
+    "open_close_interaction": true,
+    "openable_objects": [
+        "Fridge"
+    ],
     "pickup_put_interaction": false,
     "scene_id": "FloorPlan28",
     "grayscale": true,
