Increase movement penalty

--- a/gym_ai2thor/config_files/config_example3.json
+++ b/gym_ai2thor/config_files/config_example3.json
@@ -9,6 +9,7 @@
     "resolution": [128, 128],
     "cameraY": 0.0,
     "gridSize": 0.1,
+    "movement_reward": -0.1,
     "continuous_movement": true,
     "build_file_name": false,
     "task": {
