Testing syc for old version rotation

--- a/gym_ai2thor/config_files/config_example3.json
+++ b/gym_ai2thor/config_files/config_example3.json
@@ -1,4 +1,5 @@
 {
+    "render_options": {"depth": false, "object": false},
     "open_close_interaction": true,
     "openable_objects": [
         "Fridge"
